--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,6 +17,10 @@ steps:
     - '-f'
     - 'K8S/ocelot-loadbalancer-srv.yaml'
 
+  env:
+    - 'CLOUDSDK_COMPUTE_ZONE=europe-west4'
+    - 'CLOUDSDK_CONTAINER_CLUSTER=ordering-system-autopilot-cluster' 
+
 - name: 'gcr.io/cloud-builders/kubectl'
   args:
     - 'apply'
