--- a/K8S/Local/ocelot-np-srv.yaml
+++ b/K8S/Local/ocelot-np-srv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ocelot-service-nodeport
+  name: ocelot-service-loadbalancer
   labels:
     app: ocelot-api-gateway
 spec:
@@ -11,5 +11,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-      nodePort: 30818  
-  type: NodePort
+  type: LoadBalancer
