--- a/K8S/Local/ocelot-depl.yaml
+++ b/K8S/Local/ocelot-depl.yaml
@@ -27,9 +27,9 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: ocetlot-api-gateway
+    app: ocelot-api-gateway
   ports:
-  - name: ocetlot-api-gateway
+  - name: ocelot-api-gateway
     protocol: TCP
     port: 80
     targetPort: 80
